--- a/frontend/src/app/calendar/calendar.component.scss
+++ b/frontend/src/app/calendar/calendar.component.scss
@@ -6,7 +6,7 @@
   $warn: map-get($theme, warn);
 
   section.legend {
-    background-color: mat.get-color-from-palette($accent, 800) !important;
+    background-color: mat.get-color-from-palette($accent, 900) !important;
     color: mat.get-color-from-palette($primary, 900) !important;
   }
 
@@ -14,7 +14,7 @@
     article.month {
       .day {
         border-color: mat.get-color-from-palette($primary, 400) !important;
-        color: mat.get-color-from-palette($accent, 50) !important;
+        color: mat.get-contrast-color-from-palette($primary, 900) !important;
 
         &[current] {
           background-color: mat.get-color-from-palette($accent, 900) !important;
